[gd_scene load_steps=19 format=3 uid="uid://dnxsi0xc3piik"]

[ext_resource type="Script" path="res://player_ship/ship.gd" id="1_1cl4p"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="1_3r62g"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_mkt0k"]
[ext_resource type="Shader" path="res://player_ship/ship.gdshader" id="2_ro8w2"]
[ext_resource type="PackedScene" uid="uid://vjqeorqpfo0v" path="res://player_ship/ship_sprite.tscn" id="3_q7pg7"]
[ext_resource type="Script" path="res://components/move_stats.gd" id="4_rx6yn"]
[ext_resource type="Script" path="res://components/position_clamp_component.gd" id="5_8btcb"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="7_xj0ml"]
[ext_resource type="PackedScene" uid="uid://bwk3i7w3xyc0f" path="res://projectiles/laser.tscn" id="8_j4aqg"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="9_w16kn"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="11_yldfa"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="12_jgdg2"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="13_4lw7h"]
[ext_resource type="PackedScene" uid="uid://buqnvv77sevtv" path="res://effects/explosion_effect.tscn" id="13_571p8"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="13_ew4pb"]
[ext_resource type="Script" path="res://components/attack_input_component.gd" id="17_wmupw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n8nii"]
shader = ExtResource("2_ro8w2")
shader_parameter/hit_angle = null

[sub_resource type="Resource" id="Resource_8q5de"]
script = ExtResource("4_rx6yn")
speed = 100

[node name="Ship" type="Node2D"]
material = SubResource("ShaderMaterial_n8nii")
script = ExtResource("1_1cl4p")

[node name="Sprite" parent="." instance=ExtResource("3_q7pg7")]

[node name="WeaponsSpriteAnchor" type="Node2D" parent="."]

[node name="LeftMuzzle" type="Marker2D" parent="WeaponsSpriteAnchor"]
position = Vector2(-5, -4)

[node name="RightMuzzle" type="Marker2D" parent="WeaponsSpriteAnchor"]
position = Vector2(5, -4)

[node name="CenterForward" type="Marker2D" parent="WeaponsSpriteAnchor"]
position = Vector2(0, -7)

[node name="LaserSpawnerComponent" type="Node2D" parent="WeaponsSpriteAnchor"]
script = ExtResource("7_xj0ml")
scene = ExtResource("8_j4aqg")

[node name="PlayerHurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("12_jgdg2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerHurtboxComponent"]
polygon = PackedVector2Array(-6, 1, -6, 0, -5, 0, -5, -4, -4.00978, -4, -4, -1, -3, -1, -3, -4, -2, -4, -2, -5, -1, -5, -1, -7, 1, -7, 1, -5, 2, -5, 2, -4, 3, -4, 3, -1, 4, -1, 4, -4, 5, -4, 5, 0, 6, 0, 6, 1, 7, 1, 7, 2, 8, 2, 8, 4, 5, 4, 5, 7, 1, 7, 1, 6, -1, 6, -1, 7, -5, 7, -5, 4, -8, 4, -8, 2, -7, 2, -7, 1)

[node name="ExplosionSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_xj0ml")
scene = ExtResource("13_571p8")

[node name="StatsGroup" type="Node" parent="."]

[node name="StatsComponent" type="Node" parent="StatsGroup"]
script = ExtResource("11_yldfa")

[node name="MovementGroup" type="Node" parent="."]

[node name="MoveInputComponent" type="Node" parent="MovementGroup" node_paths=PackedStringArray("move_component")]
script = ExtResource("1_3r62g")
move_component = NodePath("../MoveComponent")

[node name="MoveComponent" type="Node" parent="MovementGroup" node_paths=PackedStringArray("actor")]
script = ExtResource("2_mkt0k")
actor = NodePath("../..")
move_stats = SubResource("Resource_8q5de")

[node name="ScreenClampComponent" type="Node2D" parent="MovementGroup" node_paths=PackedStringArray("actor")]
script = ExtResource("5_8btcb")
actor = NodePath("../..")

[node name="VisualGroup" type="Node" parent="."]

[node name="ScaleComponent" type="Node" parent="VisualGroup" node_paths=PackedStringArray("sprite")]
script = ExtResource("9_w16kn")
sprite = NodePath("../../Sprite")

[node name="StateGroup" type="Node" parent="."]

[node name="HurtComponent" type="Node" parent="StateGroup" node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("13_ew4pb")
stats_component = NodePath("../../StatsGroup/StatsComponent")
hurtbox_component = NodePath("../../PlayerHurtboxComponent")

[node name="DestroyedComponent" type="Node" parent="StateGroup" node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_components")]
script = ExtResource("13_4lw7h")
actor = NodePath("../..")
stats_component = NodePath("../../StatsGroup/StatsComponent")
destroy_effect_spawner_components = [NodePath("../../ExplosionSpawnerComponent")]

[node name="WeaponsGroup" type="Node" parent="."]

[node name="AttackInputComponent" type="Node" parent="WeaponsGroup" node_paths=PackedStringArray("actor", "fire_rate_timer")]
script = ExtResource("17_wmupw")
actor = NodePath("../..")
fire_rate_timer = NodePath("../FireRateTimer")

[node name="FireRateTimer" type="Timer" parent="WeaponsGroup"]
wait_time = 0.4
one_shot = true
autostart = true
